# borsaBot

./: .borsabot_setup.json  .env  .env.example  .gitattributes  .gitignore  BorsaBot.spec  Makefile  check_filling.py  check_mt5_status.py  check_mt5_status_2.py  check_pnl.py  dashboard_launcher.bat  docker-compose.yml  engine_launcher.bat  pyproject.toml  scratch_test_mt5.py  scratch_test_mt5_loop.py  start.bat  start_borsabot.bat  test_order_send.py
borsabot/: __init__.py  config.py
borsabot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
borsabot/backtest/: cpcv.py  metrics.py  simulator.py
borsabot/brokers/: base.py  binance_adapter.py  ib_adapter.py  mt5_adapter.py
borsabot/core/: bus.py  events.py  logging.py  tick_handler.py  trader.py
borsabot/execution/: algos.py  (+6 more)
launcher/: borsabot_launcher.py  build.py  version_info.txt
logs/: dash_debug.txt  live_trades_datacollection.csv  main.txt  main_test_out.txt
models/: BTC_USD_meta.pkl  BTC_USD_primary.pkl  ETH_USD_meta.pkl  ETH_USD_primary.pkl  EURUSD_meta.pkl  EURUSD_primary.pkl  XAUUSD_meta.pkl  XAUUSD_primary.pkl  mt5_meta.pkl  mt5_primary.pkl  mt5_regime.pkl  regime.pkl
monitoring/: prometheus.yml
notebooks/: 01_data_download.ipynb  02_feature_engineering.ipynb  03_labeling.ipynb  04_model_training.ipynb  05_cpcv_backtest.ipynb  README.md  train_colab.ipynb  train_colab_mt5.ipynb
results/: backtest_BTC_USD_20260318_004929.csv  eurusd_trades_analysis.csv
scripts/: analytics.py  analyze_edge.py  backtest_oos.py  check_real_balance.py  dashboard.py  example_integration.py  logger.py  main.py  run_backtest.py  run_live.py  seed_db.py  seed_db.sql  telegram_notify.py  test_order.py  test_overfitting.py
tests/: conftest.py
(+36 files in other folders)
